Updated to use a new adoptopenjdk and repair changes that manifested in the new postgres image

--- a/datastore/Dockerfile
+++ b/datastore/Dockerfile
@@ -1,5 +1,6 @@
 FROM postgres:12
-COPY docker-entrypoint-initdb.d /docker-entrypoint-initdb.d
+RUN chmod -R 1777 /tmp
+COPY --chown=postgres:postgres docker-entrypoint-initdb.d /docker-entrypoint-initdb.d
 ENV UUID_GUIDE_DB='uuid_guid_db'
 ENV UUID_GUIDE_ADMIN='uuid_guid_admin'
 ENV UUID_GUIDE_ADMIN_PASSWORD='uuid_guid_password'
