--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,21 +5,22 @@ services:
     ports:
     - "80:80"
     networks:
-      - uuid_guide    
+    - uuid_guide
   server:
     image: "server:latest"
     ports:
     - "8080:8080"
     networks:
-      - uuid_guide    
+    - uuid_guide    
   datastore:
     image: "postgres-uuid_guid:latest"
     ports:
     - "5432:5432"
     environment: 
       POSTGRES_PASSWORD: "password"
+      UUID_GUIDE_DB: 'uuid_guid_db'
       UUID_GUIDE_ADMIN: 'uuid_guid_admin'
-      UUID_GUIDE_ADMIN_PASSWORD: 'uuid_guid_password'
+      UUID_GUIDE_ADMIN_PASSWORD: 'uuid_guid_password'      
     networks:
     - uuid_guide
 networks:
